# zellij-smart-sessionizer

./: Cargo.toml  LICENSE  README.md  zellij-smart-sessionizer  zs
cli/: README.md
shell/: README.md
