[package]
name = "zellij-smart-sessionizer"
version = "0.1.0"
edition = "2021"
licence = "MIT"

[[bin]]
name = "zs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
skim = "0.10.4"
